# debug_menu

./: .clang-format  .gitignore  CMakeLists.txt  imgui.ini
app/: CMakeLists.txt
app/src/: DebugMenu.cpp  DebugMenu.h  Player.h  main.cpp
cmake/: glfw.cmake  imgui.cmake
